--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="styles.css" rel="stylesheet" />
     <script defer src="game.js"></script>
-    <title>Text Adventure</title>
+    <title>Attley's Adventure Prime</title>
   </head>
   <body>
     <div class="container">
@@ -14,8 +14,8 @@
       <div id="option-buttons" class="btn-grid">
         <button class="btn">Option 1</button>
         <button class="btn">Option 2</button>
-        <button class="btn">Option 3</button>
-        <button class="btn">Option 4</button>
+        <!-- <button class="btn">Option 3</button>
+        <button class="btn">Option 4</button> -->
       </div>
     </div>
   </body>
